[en] Bug fix: each commands which displayed an info message (/identify, /rehash ...) just cleared the screen on IE6. I found a workaround by moving the info message into the red error box. [fr] Bug fix : toutes les commandes qui affichaient un message en retour (/identify, /rehash ...) provoquaient l'effacement de l'écran sous IE6. J'ai trouvé un moyen de contourner le problème en affichant le message d'information dans la boite des erreurs.
git-svn-id: https://phpfreechat.svn.sourceforge.net/svnroot/phpfreechat/trunk@706 2772adf2-ac07-0410-9d30-e29d8120292e

--- a/themes/default/style.css
+++ b/themes/default/style.css
@@ -217,16 +217,13 @@ div#pfc_bbcode_container * {
 
 div#pfc_errors {
   display: none;
-  margin-top: 5px;
-  padding: 2px;
-  height: 18px;
-
+  padding: 5px;
   border: 1px solid #555;
-  color: #FC4A1F;
-  background-color: #FFBA76;
-  text-align: center;
+  color: #EC4B0F;
+  background-color: #FFBB77;
   font-style: italic;
-  font-weight: bold;
+  font-family: monospace;
+  font-size: 90%;
 }
 
 /* commands */
@@ -243,11 +240,18 @@ div#pfc_errors {
 }
 
 /* commands info */
-pre.pfc_info {
+.pfc_info {
   color: #888;
+
+  /* to fix IE6 display bug */
+  /* http://sourceforge.net/tracker/index.php?func=detail&aid=1545403&group_id=158880&atid=809601 */
+  font-family: sans-serif; /* do NOT setup monospace font or it will not work in IE6 */
+
   font-style: italic;
   background-color: #EEE;
+  font-size: 80%;
 }
+
 
 div#pfc_colorlist {
   display: none;
